@@ -1,5 +1,9 @@
 version <unreleased>
 
+Core
+
+* [socks] Handle cases where credentials are required but missing
+
 Extractors
 - [azubu] Remove extractor (#12813)
 * [porn91] Fix extraction (#12814)
